fixed: spacing between the intro section.

--- a/Module 3 - BBQ splash page/css/styles.css
+++ b/Module 3 - BBQ splash page/css/styles.css
@@ -80,6 +80,10 @@ Intro section
     background-position: center;
     background-size: cover;
     padding: 0 .5em 1em;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
 /*==================
